@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          - more diagnostic updates to siblings test
 
 0.010     2013-09-25 16:56:23Z (Karen Etheridge)
           - updated siblings test to help diagnose which other
